--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,13 +1,6 @@
 {
    "compilerOptions": {
-      "baseUrl": "./src",
-      "paths": {
-         "@/*": ["./src/*"],
-         "pages/*": ["./src/pages*"],
-         "components/*": ["./src/components/*"],
-         "styles/*": ["./src/styles*"],
-         "services/*": ["./src/services/*"],
-         "utilities/*": ["./src/utilities/*"],
+      "baseUrl": "./src"
       }
    },
    "exclude": ["node_modules", "**/node_modules/*", "public"]
